--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://www.wapcpharmabuja.com.ng/assets/logo-CxEnyvAI.svg"/>
+    <link rel="icon" type="image/svg+xml" href="https://ciota-cs6t95d0v-oyasi-franks-projects.vercel.app/assets/ciota-CPqtbqMd.svg"/>
     <link href="/src/index.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ejournal-ciota</title>
